--- a/About.html
+++ b/About.html
@@ -418,7 +418,7 @@
   <!-- Our Story Section -->
   <div class="category-container">
     <div class="category-header">
-      <img src="https://i.pinimg.com/736x/3e/28/c5/3e28c509f6a9d3637a7a7aa3f8a28a00.jpg" alt="Our Team" class="main-category-image">
+      <img src="https://thumbs.dreamstime.com/b/fp-logo-heraldic-shield-shape-crown-vintage-crest-white-background-template-design-letter-343459647.jpg" alt="Our Team" class="main-category-image">
       <div class="category-info">
         <h2 class="category-title">Our Story</h2>
         <p class="category-description">
