--- a/index.html
+++ b/index.html
@@ -840,7 +840,7 @@
 <div class="wrapper">
   <nav>
     <a href="index.html" class="logo">
-      <img src="https://i.pinimg.com/736x/96/16/d5/9616d593d90be28e9c69b9fec05f57fd.jpg" alt="Fictional Fate Logo"> Fictional Fate
+      <img src="https://thumbs.dreamstime.com/b/fp-logo-heraldic-shield-shape-crown-vintage-crest-white-background-template-design-letter-343459647.jpg" alt="Fictional Fate Logo"> Fictional Fate
     </a>
     <div class="nav-links">
       <a href="index.html" class="active">Home</a>
