--- a/About.html
+++ b/About.html
@@ -546,7 +546,7 @@
         <p>Explore your personality and find your fictional character matches with our fun and engaging quizzes.</p>
       </div>
       <div class="footer-section">
-	  <a href="realhome.html" class="sub-category-btn">Go Back to Home Page</a>
+	  <a href="index.html" class="sub-category-btn">Go Back to Home Page</a>
        </div>
     </div>
     <div class="copyright">
