--- a/jurassic.html
+++ b/jurassic.html
@@ -368,7 +368,7 @@ const jurassicCharacters = [
     {
         name: "Robert Muldoon",
         description: "You're experienced, practical, and have a healthy respect for danger. Like Muldoon, you understand the risks others overlook and prioritize safety and preparation. Your no-nonsense approach and attention to detail make you an excellent planner and protector. You trust your instincts and professional expertise over corporate interests, and you're not afraid to speak uncomfortable truths.",
-        image: "/api/placeholder/400/320",
+        image: "https://static.wikia.nocookie.net/jurassicpark/images/2/20/Robert_Muldoon-JP-Screenshot_2024-09-28_145752.png/revision/latest?cb=20240928190208&path-prefix=es",
         color: "#6B705C" // Olive/Khaki
     },
     {
