--- a/jurassic.html
+++ b/jurassic.html
@@ -356,7 +356,7 @@ const jurassicCharacters = [
     {
         name: "Donald Gennaro",
         description: "You're practical, concerned with liability, and focused on the bottom line. Like Gennaro, you want to see return on investment and aren't initially impressed by wonders that don't translate to tangible results. While you may appear self-interested at first, you have potential for growth and recognizing value beyond monetary measures. You appreciate security and clear structures in life.",
-        image: "/api/placeholder/400/320",
+        image: "https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTuCTKs1Z2L_CO-A_8vGpfA9r_RyqZfIZZWLQ&s",
         color: "#B08968" // Brown
     },
     {
